# flask-app

./: .gitignore  README.md  dockerfile  pyproject.toml  run.py
app/: __init__.py  app.py  exceptions.py  logic.py  models.py  routes.py  spotify.py  spotify_exceptions.py
app/templates/: index.html  profile.html
app/tests/: test_routes.py  test_spotify.py
spot-ui/: index.html  package-lock.json  package.json  vite.config.js
spot-ui/src/: App.css  App.jsx  index.css
spot-ui/src/components/: Callback.jsx  Home.css  Home.jsx  Profile.css  Profile.jsx
