[project]
name = "spotify-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "zoey.zheng",email = "zoeyyandi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
